--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "history": "^5.3.0",
     "puppeteer": "^22.7.1",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "smart-buffer": "^4.2.0"
