--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/x-data-grid": "^7.3.2",
+    "@nivo/bar": "^0.86.0",
+    "@nivo/core": "^0.86.0",
+    "@nivo/geo": "^0.86.0",
+    "@nivo/line": "^0.86.0",
+    "@nivo/pie": "^0.86.0",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "puppeteer": "^22.7.1",
     "react-icons": "^5.2.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "smart-buffer": "^4.2.0"
+    "smart-buffer": "^4.2.0",
+    "yup": "^1.4.0"
   }
 }
