--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
@@ -16,6 +18,7 @@
     "@nivo/pie": "^0.86.0",
     "formik": "^2.4.6",
     "history": "^5.3.0",
+    "lucide-react": "^0.378.0",
     "puppeteer": "^22.7.1",
     "react-icons": "^5.2.0",
     "react-pro-sidebar": "^1.1.0",
