--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@nivo/geo": "^0.86.0",
     "@nivo/line": "^0.86.0",
     "@nivo/pie": "^0.86.0",
+    "chart.js": "^4.4.2",
     "formik": "^2.4.6",
     "history": "^5.3.0",
     "lucide-react": "^0.378.0",
     "puppeteer": "^22.7.1",
+    "react-chartjs-2": "^5.2.0",
     "react-icons": "^5.2.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
