Vjudge ta  korte vule giyechilam :( ekhon done. Gomen

--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "puppeteer": "^22.7.1"
+    "axios": "^1.6.8",
+    "puppeteer": "^22.7.1",
+    "vjudge-api": "^1.0.1"
   }
 }
