--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "smart-buffer": "^4.2.0",
+    "vjudge-api": "^1.0.1",
     "yup": "^1.4.0"
   }
 }
